--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,12 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id "androidx.navigation.safeargs.kotlin"
+    id 'kotlin-kapt'
+    id 'kotlin-parcelize'
+    // hilt plugin
+    id 'dagger.hilt.android.plugin'
+
 }
 
 android {
@@ -24,11 +30,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         viewBinding = true
@@ -46,9 +52,14 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     //Splash Screen
     implementation 'androidx.core:core-splashscreen:1.0.1'
-    //navigation component
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    //Navigation Components
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.2"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.2"
+    //Dagger-Hilt Dependencies
+    implementation 'com.google.dagger:hilt-android:2.42'
+    kapt 'com.google.dagger:hilt-android-compiler:2.42'
+
     //country Code Picker
     implementation 'com.hbb20:ccp:2.7.3'
     // otp widget
@@ -58,4 +69,9 @@ dependencies {
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
     implementation 'com.github.appsfeature:otp-view:1.0'
+
+
+}
+kapt {
+    correctErrorTypes = true
 }
