--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,9 @@
 plugins {
     id 'com.android.application'
-    id 'kotlin-android'
-    id "androidx.navigation.safeargs.kotlin"
-    id 'kotlin-kapt'
-    id 'kotlin-parcelize'
-    // hilt plugin
+    id 'org.jetbrains.kotlin.android'
+    id 'androidx.navigation.safeargs.kotlin'
     id 'dagger.hilt.android.plugin'
+    id 'kotlin-kapt'
 
 }
 
@@ -42,32 +40,51 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.8.0'
+    def okhttp3Version = '4.5.0'
+    def retrofitVersion = '2.9.0'
+
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    //Splash Screen
-    implementation 'androidx.core:core-splashscreen:1.0.1'
 
-    //Navigation Components
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.2"
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.2"
-    //Dagger-Hilt Dependencies
-    implementation 'com.google.dagger:hilt-android:2.42'
-    kapt 'com.google.dagger:hilt-android-compiler:2.42'
+    //dimens
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
 
-    //country Code Picker
-    implementation 'com.hbb20:ccp:2.7.3'
-    // otp widget
-    implementation 'com.github.mukeshsolanki.android-otpview-pinview:otpview:3.1.0'
+    //font dimens
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+
+    // Coroutines
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
+
+
+    // Navigation Components
+    implementation "androidx.navigation:navigation-fragment-ktx:2.6.0"
+    implementation "androidx.navigation:navigation-ui-ktx:2.6.0"
+
+    implementation 'androidx.activity:activity-ktx:1.7.2'
+    implementation "androidx.fragment:fragment-ktx:1.6.1"
+    //retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3Version"
+
+    // Retrofit gson converter
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     implementation 'io.github.chaosleung:pinview:1.4.4'
-    //ssp && sdp to solve mobile dimensions
-    implementation 'com.intuit.ssp:ssp-android:1.1.0'
-    implementation 'com.intuit.sdp:sdp-android:1.1.0'
-    implementation 'com.github.appsfeature:otp-view:1.0'
+    implementation 'com.hbb20:ccp:2.7.3'
+    implementation 'com.github.mukeshsolanki.android-otpview-pinview:otpview:3.1.0'
+
+    implementation 'com.github.esafirm.android-image-picker:imagepicker:2.3.2'
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
+
 
 
 }
