--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'androidx.navigation.safeargs.kotlin'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+    id 'com.google.gms.google-services'
 
 }
 
@@ -40,6 +42,9 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
     def okhttp3Version = '4.5.0'
     def retrofitVersion = '2.9.0'
 
@@ -87,6 +92,9 @@ dependencies {
 
     implementation 'androidx.activity:activity-ktx:1.7.2'
     implementation "androidx.fragment:fragment-ktx:1.6.1"
+
+    //location
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
 
 
